--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Quipse, Ser Felino
+                                    Quipse, Felino
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn t-2 schedbutton">Enter <i class="fa-solid fa-chevron-right"></i></button>
