--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                                                     <div class="dropdown-menu">
                                                         <ul class="module-list">
                                                             <li class="module-item">
-                                                                <a href="FILES/STS/BSIT-1A_-Activity-1_-8-18-23.pdf" download><i class="fa-regular fa-error"></i> Activity-1 8/18/23</a>
+                                                                <a href="" download><i class="fa-regular fa-file-pdf"></i></a>
                                                             </li>
                                                         </ul>
                                                     </div>
