--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - Numeric Conversion: HEX to Binary
+                                                        - Quiz malala 🙉
                                                     </li>
                                                 </ul>
                                             </div>
