--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        -  
+                                                       - What is Science Education?
                                                     </li>
                                                 </ul>
                                             </div>
