--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ HILU LEI
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Dela Cruz, Jubelle
+                                    Dela Cruz, Jobelle
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn m-2 schedbutton">Enter <i class="fa-solid fa-chevron-right"></i></button>
@@ -733,7 +733,7 @@ HILU LEI
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Dela Cruz, Jubelle
+                                    Dela Cruz, Jobelle
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn th-2 schedbutton">Enter <i class="fa-solid fa-chevron-right"></i></button>
