--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ HILU LEI
                         <a href="#schedule" class="nav-link"><i class="fa fa-solid fa-calendar"></i> Schedule</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link"><i class="fa-regular fa-info"></i> About</a>
+                        <a href="" class="nav-link"><i class="fa-solid fa-info"></i> About</a>
                     </li>
                     <hr class="section-divider">
                     <li class="nav-item">
