--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>CC-101</span></p>
+                                    <p>CODE: <span>CC-101</span></p>
                                     <p>Computer Programming 1, Fundamentals</p>
                                     <p>M 9:00 AM - 12:00 PM</p>
                                     <p>RM 306</p>
@@ -236,7 +236,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>KOMFIL</span></p>
+                                    <p>CODE: <span>KOMFIL</span></p>
                                     <p>Kontekswalisadong Komunikasyon sa Filipino</p>
                                     <p>M 1:00 PM - 2:30 PM</p>
                                     <p>RM 107</p>
@@ -308,7 +308,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>GE 07</span></p>
+                                    <p>CODE: <span>GE 07</span></p>
                                     <p>Science, Technology and Society</p>
                                     <p>T 7:30 AM - 9:00 AM</p>
                                     <p>RM 104</p>
@@ -367,7 +367,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>PE 1</span></p>
+                                    <p>CODE: <span>PE 1</span></p>
                                     <p>Advanced Gymnastics</p>
                                     <p>T 10:00 AM - 12:00 PM</p>
                                     <p>TBA</p>
@@ -423,7 +423,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>GE 05</span></p>
+                                    <p>CODE: <span>GE 05</span></p>
                                     <p>Purposive Communication</p>
                                     <p>T 1:00 PM PM - 4:00 PM</p>
                                     <p>RM 107</p>
@@ -489,7 +489,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>CC-100</span></p>
+                                    <p>CODE: <span>CC-100</span></p>
                                     <p>Introduction to Computing</p>
                                     <p>W 8:00 AM - 11:00 AM</p>
                                     <p>RM 111</p>
@@ -545,7 +545,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>IT-NET01</span></p>
+                                    <p>CODE: <span>IT-NET01</span></p>
                                     <p>Networking 1, Fundamentals</p>
                                     <p>W 11:00 AM - 12:00 PM</p>
                                     <p>UCC 1</p>
@@ -601,7 +601,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>CC-101</span></p>
+                                    <p>CODE: <span>CC-101</span></p>
                                     <p>Computer Programming 1, Fundamentals</p>
                                     <p>W 1:00 PM - 3:00 PM</p>
                                     <p>LAB 4</p>
@@ -665,7 +665,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>IT-NET01</span></p>
+                                    <p>CODE: <span>IT-NET01</span></p>
                                     <p>Networking Fundamentals/p>
                                     <p>TH 8:00 AM - 12:00 PM</p>
                                     <p>UCC 1</p>
@@ -721,7 +721,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>KOMFIL</span></p>
+                                    <p>CODE: <span>KOMFIL</span></p>
                                     <p>Kontekswalisadong Komunikasyon sa Filipino</p>
                                     <p>TH 1:00 PM - 2:30 PM</p>
                                     <p>RM 107</p>
@@ -793,7 +793,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>GE 07</span></p>
+                                    <p>CODE: <span>GE 07</span></p>
                                     <p>Science, Technology and Society</p>
                                     <p>F 7:30 AM - 9:00 AM</p>
                                     <p>RM 103</p>
@@ -852,7 +852,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>GE 04</span></p>
+                                    <p>CODE: <span>GE 04</span></p>
                                     <p>Mathematics in the Modern World</p>
                                     <p>F 1:00 PM - 4:00 PM</p>
                                     <p>RM 103</p>
@@ -924,7 +924,7 @@ HILU LEI
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE <span>NSTP 11</span></p>
+                                    <p>CODE: <span>NSTP 11</span></p>
                                     <p>National Training Service Program 1</p>
                                     <p>SAT 8:00 AM - 11:00 AM</p>
                                     <p>TBA</p>
