--- a/index.html
+++ b/index.html
@@ -985,6 +985,10 @@ HILU LEI
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
+<script>
     const checkbox = document.querySelector("input[type='checkbox']");
 
     checkbox.addEventListener("click", () => {
