--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ HILU LEI
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - Quiz malala 🙉
+                                                        - Quiz 100pts.
                                                     </li>
                                                 </ul>
                                             </div>
@@ -976,6 +976,7 @@ HILU LEI
                 </div>
             </div>
         </div>
+        <p>gawa po ito ni <a href="https://cedricangulo.vercel.app">Cedric Angulo</a> yun lang thank you sa pag view ng website.</p>
     </section>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
