--- a/index.html
+++ b/index.html
@@ -976,7 +976,7 @@ HILU LEI
                 </div>
             </div>
             
-        <p>gawa po ito ni <a href="https://cedricangulo.vercel.app">Cedric Angulo</a> yun lang thank you sa pag view ng website.</p>
+        <p>gawa po ito ni <a href="https://cedricangulo.vercel.app">Cedric Angulo</a> yun lang thank you sa pag view ng website. Ganito itsura kasi di pa tapos :)</p>
         </div>
     </section>
 </body>
