--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@ HILU LEI
                                 </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>IT-NET01</span></p>
-                                    <p>Networking Fundamentals/p>
+                                    <p>Networking Fundamentals</p>
                                     <p>TH 8:00 AM - 12:00 PM</p>
                                     <p>UCC 1</p>
                                     <div id="schedule9" class="schedule"></div>
