--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,10 +14,10 @@
     <link rel="stylesheet" href="CSS/playground.css">
     <title>BSIT 1A</title>
 </head>
-
 <body>
-    <!-- 
-HILU LEI     
+    <!--
+        Bat umabot ka dito par
+        wag mo na tignan nakakahiya code ko
     -->
     <section class="intro" id="intro">
         <header class="header">
@@ -41,9 +40,9 @@ HILU LEI
                     <li class="nav-item">
                         <a href="#schedule" class="nav-link"><i class="fa fa-solid fa-calendar"></i> Schedule</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="" class="nav-link"><i class="fa-solid fa-info"></i> About</a>
-                    </li>
+                    <!-- <li class="nav-item">
+                        <a href="" class="nav-link"><i class="fa fa-solid fa-info"></i> About</a>
+                    </li> -->
                     <hr class="section-divider">
                     <li class="nav-item">
                         <label class="switch">
@@ -95,7 +94,7 @@ HILU LEI
             </div>
             <div class="president">
                 <div class="officer">
-                    <img src="images/officercard.png" alt="Officer1">
+                    <img src="images/officer1.png" alt="Officer1">
                     <div class="officer-details">
                         <h3>PRESIDENT</h3>
                         <p>AJ Capule</p>
@@ -120,7 +119,7 @@ HILU LEI
                     </div>
                 </div>
                 <div class="officer">
-                    <img src="images/officercard.png" alt="Officer 4">
+                    <img src="images/officer4.png" alt="Officer 4">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
                         <h3>AUDITOR</h3>
@@ -333,7 +332,7 @@ HILU LEI
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                       - What is Science Education?
+                                                        - What is Science Education?
                                                     </li>
                                                 </ul>
                                             </div>
@@ -975,19 +974,34 @@ HILU LEI
                     </div>
                 </div>
             </div>
-            
-        <p>gawa po ito ni <a href="https://cedricangulo.vercel.app">Cedric Angulo</a> yun lang thank you sa pag view ng website. Ganito itsura kasi di pa tapos :)</p>
         </div>
+        <!-- <p>gawa po ito ni <a href="https://cedricangulo.vercel.app">Cedric Angulo</a> yun lang thank you sa pag view ng website. Ganito itsura kasi di pa tapos :)</p> -->
+        <footer>
+            <div class="footer-container">
+                <div class="developer">
+                    <p>Developed by <a href="https://cedricangulo.vercel.app" target="_blank">Cedric Angulo</a></p>
+                </div>
+                <div class="vercel">
+                    <div class="vercel-text">
+                        <p>Deployed in</p>
+                    </div>
+                    <div class="vercel-logo">
+                        <img src="images/vercelD.png" alt="vercel" class="vercelD">
+                        <img src="images/vercelL.png" alt="vercel" class="vercelL">
+                    </div>
+                </div>
+            </div>
+        </footer>
     </section>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-<script src="JS/script.js"></script>
-<script src="JS/sched.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="JS/script.js"></script>
+<script src="JS/sched.js"></script>
 <script>
-  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
 </script>
 <script defer src="/_vercel/insights/script.js"></script>
 <script>
@@ -998,7 +1012,3 @@ HILU LEI
 })
 </script>
 </html>
-<!-- <label class="switch">
-    <input type="checkbox">
-    <span class="slider"></span>
-</label> -->
