--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -11,7 +11,6 @@
     <!-- <link rel="stylesheet" href="https://unpkg.com/css.gg@2.0.0/icons/css"> -->
     <link rel="icon" href="images/1A.png">
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/playground.css">
     <title>BSIT 1A</title>
 </head>
 <body>
