--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - 
+                                                        - <i>Tula</i> Until a week before Midterm Exam
                                                     </li>
                                                 </ul>
                                             </div>
