--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                                                     <div class="dropdown-menu">
                                                         <ul class="module-list">
                                                             <li class="module-item">
-                                                                <a href="FILES/ITNET01/ITNET01.pdf" download><i class="fa-regular fa-pdf"></i> Little Reviewer</a>
+                                                                <a href="FILES/ITNET01/ITNET01.pdf" download><i class="fa-regular fa-file-pdf"></i> Little Reviewer</a>
                                                             </li>
                                                         </ul>
                                                     </div>
