--- a/index.html
+++ b/index.html
@@ -22,37 +22,37 @@
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
-                <div class="hamburger">
+                <div class="hamburger" data-aos="fade-right" data-aos-duration="500" data-aos-delay="100">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <div class="section-name">
+                <div class="section-name" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
                     <h4>BSIT-1A</h4>
                 </div>
                 <ul class="nav-menu">
-                    <li class="nav-item">
+                    <li class="nav-item" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
                         <a href="#home" class="nav-link"><i class="fa fa-solid fa-house"></i> Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item"data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
                         <a href="#officers" class="nav-link"><i class="fa fa-solid fa-users"></i> Officers</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">
                         <a href="#schedule" class="nav-link"><i class="fa fa-solid fa-calendar"></i> Schedule</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a href="" class="nav-link"><i class="fa fa-solid fa-info"></i> About</a>
                     </li> -->
                     <hr class="section-divider">
-                    <li class="nav-item">
+                    <li class="nav-item" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
                         <label class="switch">
                             <input type="checkbox">
                             <span class="slider"></span>
                         </label>
                     </li>
                 </ul>
-                <a href="https://www.facebook.com/CICTLocalStudentGovernment" target="_blank" class="nav-logo">
-                    <img src="images/CICT.png" alt="">
+                <a href="https://www.facebook.com/CICTLocalStudentGovernment" target="_blank" class="nav-logo" data-aos="fade-left" data-aos-duration="500" data-aos-delay="300">
+                    <img src="images/CICT.png" alt="cict">
                 </a>
             </nav>
         </header>
