--- a/index.html
+++ b/index.html
@@ -1011,4 +1011,8 @@
     document.body.classList.toggle("dark");
 })
 </script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </html>
