--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <div class="section-name" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
+                <div class="section-name" data-aos="fade-down" data-aos-duration="500" data-aos-delay="200">
                     <h4>BSIT-1A</h4>
                 </div>
                 <ul class="nav-menu">
@@ -59,10 +59,10 @@
         <div class="overlay"></div>
         <div class="home-content" id="home">
             <div class="intro-text">
-                <div class="intro-title">
+                <div class="intro-title" data-aos="fade-right" data-aos-duration="500" data-aos-delay="200">
                     <p>WELCOME <span>NEUST</span><span>IANS</span>!</p>
                 </div>
-                <div class="intro-subtitle">
+                <div class="intro-subtitle" data-aos="fade-right" data-aos-duration="500" data-aos-delay="400">
                     <p>COLLEGE OF</p>
                     <p>INFORMATION <span>AND</span></p>
                     <p>COMMUNICATIONS</p>
@@ -89,11 +89,11 @@
         </div>
         <div class="page_b" id="officers">
             <div class="circle"></div>
-            <div class="page_b_title">
+            <div class="page_b_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
                 <p>CLASS OFFICERS</p>
             </div>
             <div class="president">
-                <div class="officer">
+                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">
                     <img src="images/officer1.png" alt="Officer1">
                     <div class="officer-details">
                         <h3>PRESIDENT</h3>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="team">
-                <div class="officer">
+                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="500">
                     <img src="images/officercard.png" alt="Officer 2">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
@@ -110,7 +110,7 @@
                         <p>Marnie Shynne Clamonte</p>
                     </div>
                 </div>
-                <div class="officer">
+                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
                     <img src="images/officercard.png" alt="Officer 3">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
@@ -118,7 +118,7 @@
                         <p>Michaella Nicole Ramos</p>
                     </div>
                 </div>
-                <div class="officer">
+                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="900">
                     <img src="images/officer4.png" alt="Officer 4">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
@@ -126,7 +126,7 @@
                         <p>Sarrah Quijano</p>
                     </div>
                 </div>
-                <div class="officer">    
+                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1100">    
                     <img src="images/officercard.png" alt="Officer 5">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
@@ -134,7 +134,7 @@
                         <p>Aljon Rey Apan</p>
                     </div>
                 </div>
-                <div class="officer">    
+                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1300">    
                     <img src="images/officercard.png" alt="Officer 5">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
@@ -142,7 +142,7 @@
                         <p>Lei Laborina</p>
                     </div>
                 </div>
-                <div class="officer">
+                <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1500">
                     <img src="images/officercard.png" alt="Officer 6">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
