--- a/index.html
+++ b/index.html
@@ -153,18 +153,18 @@
             </div>
         </div>
         <div class="page_c" id="schedule">
-            <div class="page_c_title">
+            <div class="page_c_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
                 <p>
                     CLASS SCHEDULE
                 </p>
             </div>
             <div class="sched-grid">
                 <div class="sched-card">
-                    <div class="sched-header">
+                    <div class="sched-header" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">
                         <p>MONDAY</p>
                     </div>
                     <div class="sched-wrapper">
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="500">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
@@ -227,7 +227,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
@@ -295,11 +295,11 @@
                     </div>
                 </div>
                 <div class="sched-card">
-                    <div class="sched-header">
+                    <div class="sched-header" data-aos="fade-up" data-aos-duration="500" data-aos-delay="900">
                         <p>TUESDAY</p>
                     </div>
                     <div class="sched-wrapper">
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1100">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
@@ -358,7 +358,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1300">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
@@ -414,7 +414,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1500">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
@@ -476,11 +476,11 @@
                     </div>
                 </div>
                 <div class="sched-card">
-                    <div class="sched-header">
+                    <div class="sched-header" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1700">
                         <p>WEDNESDAY</p>
                     </div>
                     <div class="sched-wrapper">
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1900">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
@@ -536,7 +536,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="2100">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
@@ -592,7 +592,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="2300">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
@@ -652,11 +652,11 @@
                     </div>
                 </div>
                 <div class="sched-card">
-                    <div class="sched-header">
+                    <div class="sched-header" data-aos="fade-up" data-aos-duration="500" data-aos-delay="2500">
                         <p>THURSDAY</p>
                     </div>
                     <div class="sched-wrapper">
-                        <div class="sub-card">
+                        <div class="sub-card" data-aos="fade-up" data-aos-duration="500" data-aos-delay="2700">
                             <div class="sub-card-top">
                                 <div class="fade-text">
                                     <span class="fade-bs">BS</span>
