--- a/index.html
+++ b/index.html
@@ -332,7 +332,10 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - What is Science Education?
+                                                        - WHAT IS INDIGENOUS SCIENCE?
+                                                    </li>
+                                                    <li class="topic-item">
+                                                        - How would you define indigenous science?
                                                     </li>
                                                 </ul>
                                             </div>
@@ -447,7 +450,12 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - 
+                                                        - Lesson 3
+                                                        Verbal and Non verbal
+                                                    </li>
+                                                    <li class="topic-item">
+                                                        - Lesson 4
+                                                        Listening and Spoken Language 
                                                     </li>
                                                 </ul>
                                             </div>
