--- a/index.html
+++ b/index.html
@@ -825,7 +825,10 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - 
+                                                        - WHAT IS INDIGENOUS SCIENCE?
+                                                    </li>
+                                                    <li class="topic-item">
+                                                        - How would you define indigenous science?
                                                     </li>
                                                 </ul>
                                             </div>
