--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - 
+                                                        - Stritching
                                                     </li>
                                                 </ul>
                                             </div>
