--- a/index.html
+++ b/index.html
@@ -634,7 +634,10 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - Quiz 100pts.
+                                                        Quiz Coverage
+                                                    </li>
+                                                    <li class="topic-item">
+                                                        - Unit 1 and 2
                                                     </li>
                                                 </ul>
                                             </div>
