--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - 
+                                                        - No Classes 8am to 12nn
                                                     </li>
                                                 </ul>
                                             </div>
@@ -577,7 +577,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - 
+                                                        - No Classes 8am to 12nn
                                                     </li>
                                                 </ul>
                                             </div>
