--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                                                 <a href="FILES/CC-101 CP1F/Syllabus of Instructions in CC-101.pdf"><i class="fa-regular fa-file-pdf"></i> Syllabus</a>
                                                             </li>
                                                             <li class="module-item">
-                                                                <a href="FILES/CC-101 CP1F/CC-101 WorkText v4 Unit1-7.pdf" download><i class="fa-regular fa-file-pdf"></i> UNIT 1-7 v4</a>
+                                                                <a href="FILES/CC-101 CP1F/CC-101 WorkText v4 Unit1-7.pdf"><i class="fa-regular fa-file-pdf"></i> UNIT 1-7 v4</a>
                                                             </li>
                                                         </ul>
                                                     </div>
