--- a/index.html
+++ b/index.html
@@ -551,7 +551,10 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - No Classes Orientation only at Open Gym 8am to 12nn
+                                                        - No Classes, orientation only at Open Gym 8am to 12nn
+                                                    </li>
+                                                    <li class="topic-item">
+                                                        Source: <a href="https://m.facebook.com/story.php?story_fbid=pfbid02nfZcSAAVm44TPHt9GAumnV3HDySuTjGigWyspkYmLeST87Mev3Gt6tzEuPKxeVZvl&id=100063576801635&mibextid=CDWPTG" target="_blank">CICT LSG</a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -608,6 +611,9 @@
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
                                                         - No Classes Orientation only at Open Gym 8am to 12nn
+                                                    </li>
+                                                    <li class="topic-item">
+                                                        Source: <a href="https://m.facebook.com/story.php?story_fbid=pfbid02nfZcSAAVm44TPHt9GAumnV3HDySuTjGigWyspkYmLeST87Mev3Gt6tzEuPKxeVZvl&id=100063576801635&mibextid=CDWPTG" target="_blank">CICT LSG</a>
                                                     </li>
                                                 </ul>
                                             </div>
