--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Alcantara, Jiezel
+                                    Alcantara, Jiezel V.
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn t-3 schedbutton">Enter <i class="fa-solid fa-chevron-right"></i></button>
